# internal/router/user.go
@@ -11,4 +11,5 @@ func UserRouter(r fiber.Router) {
 	users := r.Group("/users")
 	users.Post("/login", handler.UserHandler.Login)
 	users.Get("/check", middleware.AuthMiddleware, handler.UserHandler.Check)
+	users.Patch("/refresh", handler.UserHandler.Refresh)
 }
